test/resources/testcontents/testing/saker/build/tests/tasks/script/InvalidDefaultsFileTest/withbuildtarget.build
defaults(
	example.echo
	Input: abc
)

build() {
}